<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_ripple"
    android:layout_width="match_parent"
    android:layout_height="55dp">

    <TextView
        android:id="@+id/favorite_row_baseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bse"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/favorite_row_symbolTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favorite_row_baseImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favorite_row_symbolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbl"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/favorite_row_symbolImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favorite_row_baseTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/favorite_row_baseImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/favorite_row_baseTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />

    <ImageView
        android:id="@+id/favorite_row_symbolImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favorite_row_symbolTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />

    <ImageView
        android:id="@+id/favorite_row_arrowImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/favorite_row_symbolTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favorite_row_baseTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
</androidx.constraintlayout.widget.ConstraintLayout>