<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_converter_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/new_converter_baseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBaseCurrency_string"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/new_converter_baseSpinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_guidline" />

    <TextView
        android:id="@+id/new_converter_symbolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSymbolCurrency_string"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/new_converter_symbolSpinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_converter_baseSpinner"
        app:layout_constraintTop_toTopOf="@+id/first_guidline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <Spinner
        android:id="@+id/new_converter_baseSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/available_currencies"
        app:layout_constraintEnd_toStartOf="@+id/new_converter_symbolTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_converter_baseTextView"
        app:layout_constraintTop_toTopOf="@+id/first_guidline" />

    <Spinner
        android:id="@+id/new_converter_symbolSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/available_currencies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_converter_symbolTextView"
        app:layout_constraintTop_toTopOf="@+id/first_guidline" />

    <ImageButton
        android:id="@+id/new_converter_revertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/first_guidline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_repeat_24" />

    <ImageButton
        android:id="@+id/new_converter_plotButton"
        android:layout_width="240dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/second_guideline"
        app:srcCompat="@drawable/ic_baseline_show_chart_24" />

    <EditText
        android:id="@+id/new_converter_baseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:inputType="numberDecimal"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/second_guideline"
        app:layout_constraintEnd_toStartOf="@+id/new_converter_arrowImageView"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_guidline"
        app:layout_constraintVertical_bias="0.966"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/new_converter_symbolEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/second_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toEndOf="@+id/new_converter_arrowImageView"
        app:layout_constraintTop_toTopOf="@+id/first_guidline"
        app:layout_constraintVertical_bias="1.0"
        android:importantForAutofill="no" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:id="@+id/new_converter_arrowImageView"
        android:layout_width="69dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/second_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/first_guidline"
        app:layout_constraintVertical_bias="0.526"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>